[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
install_requires =
    ensure==1.0.4
    py-youtube==1.1.7
    ipywidgets==8.1.5
    notebook==7.3.2
python_requires = >=3.8

[options.extras_require]
testing = 
    pytest==8.3.4
    mypy==1.14.1
    flake8==7.1.1
    tox==4.23.2
    black==23.1.0

[options.package_data]
* = py.typed

[flake8]
max-line-length = 127
exclude = 
    __init__.py
